--- a/Deep_Dive_1_Function_parametars.ipynb
+++ b/Deep_Dive_1_Function_parametars.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Deep_Dive_1_Function_parametars.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNXN5hbZq3bsHg15D//99lN",
+      "authorship_tag": "ABX9TyOxhOFndtDzqrbos0M0HCqA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -164,7 +164,7 @@
       "metadata": {
         "id": "GGjQi54E9yON",
         "colab_type": "code",
-        "outputId": "f8f75427-90a4-4cb0-c5b1-85e984709f7c",
+        "outputId": "84d28a58-d15d-4564-bb6e-b90a236021c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -173,7 +173,7 @@
       "source": [
         "my_func(1, 2, 3)"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +225,7 @@
       "metadata": {
         "id": "_AFrAe6794lB",
         "colab_type": "code",
-        "outputId": "ed86e88b-60fd-4422-94ce-82372cfd4218",
+        "outputId": "de65d392-4301-49eb-8c6d-cd1816aa05b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
@@ -235,14 +235,14 @@
         "def fn(a, b=2, c):\n",
         "    print(a, b, c)"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
           "evalue": "ignored",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-535e50422129>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def fn(a, b=2, c):\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m non-default argument follows default argument\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-535e50422129>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def fn(a, b=2, c):\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m non-default argument follows default argument\n"
           ]
         }
       ]
@@ -255,7 +255,7 @@
         "colab": {}
       },
       "source": [
-        "def my_func(a, b=2, c=3)\n",
+        "def my_func(a, b=2, c=3):\n",
         "    print(f\"a={a}, b={b}, c={c}\")"
       ],
       "execution_count": 0,
@@ -266,7 +266,7 @@
       "metadata": {
         "id": "fwdJMSDZ-BHk",
         "colab_type": "code",
-        "outputId": "c719f93a-448a-448e-c477-d3e234f6883a",
+        "outputId": "03a199ee-0ca8-4262-bc1e-aa971d915b26",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -275,7 +275,7 @@
       "source": [
         "my_func(10, 20, 30)"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -316,7 +316,7 @@
       "metadata": {
         "id": "WzGEg6A4-Ibv",
         "colab_type": "code",
-        "outputId": "6ea49d53-fdfb-4895-fb1c-4b5b81a2eff2",
+        "outputId": "4d5d8cfc-0ae9-4974-aff0-4cc29ad8de73",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -325,7 +325,7 @@
       "source": [
         "my_func(10)"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,7 +365,7 @@
       "metadata": {
         "id": "P90H2SUH-Kah",
         "colab_type": "code",
-        "outputId": "34ee8ca1-977d-4ae3-f56f-f820e912bb09",
+        "outputId": "7372f9fa-740f-488a-ee3f-6d0e32cc821c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -374,7 +374,7 @@
       "source": [
         "my_func()"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,7 +426,7 @@
       "metadata": {
         "id": "wJ1mAzif-Ubg",
         "colab_type": "code",
-        "outputId": "06c78dfa-18fd-4438-f8cf-adc8570f757b",
+        "outputId": "961356d6-c09c-4180-8be8-e51b839b24fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -435,7 +435,7 @@
       "source": [
         "my_func(c=30, b=20, a=10)"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,7 +451,7 @@
       "metadata": {
         "id": "32z6uB8i-Vd0",
         "colab_type": "code",
-        "outputId": "93a62a52-33f1-4793-bc22-082dcdbcd6d5",
+        "outputId": "f6f90732-6963-42cd-e5ab-df69578bbe95",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -460,7 +460,7 @@
       "source": [
         "my_func(10, c=30, b=20)"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -486,7 +486,7 @@
       "metadata": {
         "id": "Xd56LPGs-WvO",
         "colab_type": "code",
-        "outputId": "40f02fc6-c9c5-40bd-ace8-528f689c85fa",
+        "outputId": "31c51ea9-f0c3-44f1-966b-ee8259d28a83",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
@@ -495,14 +495,14 @@
       "source": [
         "my_func(10, b=20, 30)"
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
           "evalue": "ignored",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-38-a114ab951de8>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    my_func(10, b=20, 30)\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-a114ab951de8>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    my_func(10, b=20, 30)\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
           ]
         }
       ]
@@ -522,7 +522,7 @@
       "metadata": {
         "id": "ngEg0rF3-acv",
         "colab_type": "code",
-        "outputId": "07777583-d46e-414c-9df3-06e5163d4ec2",
+        "outputId": "930e9c2f-7ccf-4e86-afa3-1d5d175227e6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -531,7 +531,7 @@
       "source": [
         "my_func(10, c=30)"
       ],
-      "execution_count": 0,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,7 +547,7 @@
       "metadata": {
         "id": "PD816hCQ-dkc",
         "colab_type": "code",
-        "outputId": "34e746b8-9b52-48f8-8a79-bc596d9dda15",
+        "outputId": "5ded63b4-ac29-4402-de26-2a28645da3fb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -556,7 +556,7 @@
       "source": [
         "my_func(a=30, c=10)"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -572,7 +572,7 @@
       "metadata": {
         "id": "WLVX6Vwg-ejx",
         "colab_type": "code",
-        "outputId": "f383e113-70e7-4ec9-86bc-9b03c04a5cb0",
+        "outputId": "69ca5601-b913-4bfc-81aa-1bb4453a4c0c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -581,7 +581,7 @@
       "source": [
         "my_func(c=10, a=30)"
       ],
-      "execution_count": 0,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -3458,7 +3458,11 @@
       "metadata": {
         "id": "xREt_48LFxmU",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "ead23176-464a-436e-f1f3-1062eb93c7fe"
       },
       "source": [
         "def func1(a, b, *my_vars):\n",
@@ -3468,15 +3472,29 @@
         "\n",
         "func1(10, 20, 'a', 'b', 'c')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n",
+            "20\n",
+            "('a', 'b', 'c')\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "8nv091aakm-u",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 197
+        },
+        "outputId": "dc9f3a49-a858-4240-f9ff-a206ba881bf8"
       },
       "source": [
         "def func1(a, b, *c, d):\n",
@@ -3487,8 +3505,20 @@
         "\n",
         "func1(10, 20, 'a', 'b', 100)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-20-731d4b07c5ba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mfunc1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'a'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'b'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: func1() missing 1 required keyword-only argument: 'd'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3505,11 +3535,11 @@
       "metadata": {
         "id": "wKQIyiPEkzzf",
         "colab_type": "code",
+        "outputId": "9193c5bf-f97d-43da-e387-bf78c951f9b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "9193c5bf-f97d-43da-e387-bf78c951f9b8"
+        }
       },
       "source": [
         "def avg(*args):\n",
@@ -3519,7 +3549,7 @@
         "\n",
         "avg(2, 2, 4, 4)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3550,16 +3580,16 @@
       "metadata": {
         "id": "ibTlxu4Dkpkl",
         "colab_type": "code",
+        "outputId": "5141f9db-7e36-46e2-b629-36baddefffcd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        },
-        "outputId": "5141f9db-7e36-46e2-b629-36baddefffcd"
+        }
       },
       "source": [
         "avg()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -3592,11 +3622,11 @@
       "metadata": {
         "id": "OPzLVzEvk7RS",
         "colab_type": "code",
+        "outputId": "75c77fcd-4251-47dc-82ce-f06e294f8d57",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "75c77fcd-4251-47dc-82ce-f06e294f8d57"
+        }
       },
       "source": [
         "def avg(*args):\n",
@@ -3609,7 +3639,7 @@
         "\n",
         "avg(2, 2, 4, 4)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3630,16 +3660,16 @@
       "metadata": {
         "id": "9YVcVOollF3x",
         "colab_type": "code",
+        "outputId": "8adc9c4a-95f4-4bbf-896d-c583ef455a83",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "8adc9c4a-95f4-4bbf-896d-c583ef455a83"
+        }
       },
       "source": [
         "avg()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3658,6 +3688,62 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "kV5NOfkRCQUX",
+        "colab_type": "text"
+      },
+      "source": [
+        "We can short circuit and avoid if/else statement by doing this:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m_wSZrmxCMkc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def avg(*args):\n",
+        "    count = len(args)\n",
+        "    total = sum(args)\n",
+        "    return count and total/count\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ccHKWSKeCk1U",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c76c8177-ae34-4147-e1b4-2d60a9de161c"
+      },
+      "source": [
+        "avg()"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "vaLE8A0zlJX3",
         "colab_type": "text"
       },
@@ -3670,11 +3756,11 @@
       "metadata": {
         "id": "lzR914AElGsD",
         "colab_type": "code",
+        "outputId": "64cd2fa0-c04e-4853-d612-8d1b04154032",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "8a3242f6-ea5b-43eb-e728-60773fb8e534"
+        }
       },
       "source": [
         "def avg(a, *args):\n",
@@ -3684,7 +3770,7 @@
         "\n",
         "avg(2, 2, 4, 4)"
       ],
-      "execution_count": 6,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3696,7 +3782,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 23
         }
       ]
     },
@@ -3705,16 +3791,16 @@
       "metadata": {
         "id": "R-LsfJxFlO8P",
         "colab_type": "code",
+        "outputId": "ab66f462-c3bf-4187-d8c5-444ac6cd99c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 163
-        },
-        "outputId": "0eb73eb3-042d-46bb-9abf-31e6ffba3035"
+        }
       },
       "source": [
         "avg()"
       ],
-      "execution_count": 7,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "error",
@@ -3723,7 +3809,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-7-f5d909301850>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mavg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-24-f5d909301850>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mavg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m: avg() missing 1 required positional argument: 'a'"
           ]
         }
@@ -3782,16 +3868,16 @@
       "metadata": {
         "id": "cF7xZLiqlQyy",
         "colab_type": "code",
+        "outputId": "5735742e-9ea0-4710-c314-d9e1e6d349d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 163
-        },
-        "outputId": "5735742e-9ea0-4710-c314-d9e1e6d349d4"
+        }
       },
       "source": [
         "func1(l)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -3823,16 +3909,16 @@
       "metadata": {
         "id": "Ho9wYBQhlhYf",
         "colab_type": "code",
+        "outputId": "e1e8eef1-15ef-4387-8764-ce8db7547768",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "62930615-538f-4898-bb02-567c0c762fa0"
+        }
       },
       "source": [
         "*l,"
       ],
-      "execution_count": 11,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3844,7 +3930,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 29
         }
       ]
     },
@@ -3853,16 +3939,16 @@
       "metadata": {
         "id": "DfpP6LM1lkvj",
         "colab_type": "code",
+        "outputId": "958c2d1d-2730-4d15-d95d-a99b799740a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "958c2d1d-2730-4d15-d95d-a99b799740a2"
+        }
       },
       "source": [
         "func1(*l)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3890,11 +3976,11 @@
       "metadata": {
         "id": "6gXTH5QQlpYd",
         "colab_type": "code",
+        "outputId": "5089ec6b-e082-4a50-fa37-1147b43ca4b2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
-        },
-        "outputId": "c160f082-bd60-47ac-d48f-4404aebe8b39"
+        }
       },
       "source": [
         "def func1(a, b, c, *d):\n",
@@ -3905,14 +3991,14 @@
         "\n",
         "func1(10, c=20, b=10, 'a', 'b')"
       ],
-      "execution_count": 13,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
           "evalue": "ignored",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-a96a5e333513>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    func1(10, c=20, b=10, 'a', 'b')\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-a96a5e333513>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    func1(10, c=20, b=10, 'a', 'b')\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
           ]
         }
       ]
