--- a/Deep_Dive_1_Section_5_Function_parametars.ipynb
+++ b/Deep_Dive_1_Section_5_Function_parametars.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Deep_Dive_1_Section_5_Function_parametars.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMwaZKXyOsqRpqMMsPIZt41",
+      "authorship_tag": "ABX9TyNO5EzEkLtaFRFyhTUh5QWf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6125,16 +6124,16 @@
       "metadata": {
         "id": "EZHPxXvmHGZD",
         "colab_type": "code",
+        "outputId": "31a74805-f29a-46e2-8a86-33c7d8ec08a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "31a74805-f29a-46e2-8a86-33c7d8ec08a2"
+        }
       },
       "source": [
         "time_it(print, 1, 2, 3, sep='-')"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6158,6 +6157,67 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "rtMllm7Q4WzL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "25b5cae4-b766-433f-8f6e-19d9e71f2f26"
+      },
+      "source": [
+        "def time_it(func, *args, **kwargs):\n",
+        "    func(*args, **kwargs)\n",
+        "\n",
+        "time_it(print, 1, 2, 3, sep='...', end = ' ***')"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1...2...3 ***"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hbaZ5l0w5JXa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "331320ce-7d0e-4cd5-b156-c2a97dd05f94"
+      },
+      "source": [
+        "def time_it(func, *args, rep=1, **kwargs):\n",
+        "    for i in range(rep):\n",
+        "        func(*args, **kwargs)\n",
+        "\n",
+        "time_it(print, 1, 2, 3, sep='-', end=' ***\\n', rep=5)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1-2-3 ***\n",
+            "1-2-3 ***\n",
+            "1-2-3 ***\n",
+            "1-2-3 ***\n",
+            "1-2-3 ***\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "DSLe_AupHJTr",
         "colab_type": "code",
         "colab": {}
@@ -6175,16 +6235,16 @@
       "metadata": {
         "id": "uYAO6WxjHM4e",
         "colab_type": "code",
+        "outputId": "865568f4-aaf3-421b-b3f6-15c09f347c3f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "865568f4-aaf3-421b-b3f6-15c09f347c3f"
+        }
       },
       "source": [
         "time_it(print, 1, 2, 3, sep='-')"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6216,16 +6276,16 @@
       "metadata": {
         "id": "wo0amhZ6HOJu",
         "colab_type": "code",
+        "outputId": "abdaf665-6238-42ab-e0b5-2351c85eee0e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "abdaf665-6238-42ab-e0b5-2351c85eee0e"
+        }
       },
       "source": [
         "time_it(print, 1, 2, 3, sep='-', end=' *** ', rep=3)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6340,16 +6400,16 @@
       "metadata": {
         "id": "ubq40mF-HeqS",
         "colab_type": "code",
+        "outputId": "b0436601-29e5-4838-da43-141f54b7e049",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b0436601-29e5-4838-da43-141f54b7e049"
+        }
       },
       "source": [
         "compute_powers_1(2, end=5)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6370,16 +6430,16 @@
       "metadata": {
         "id": "vYyvf0m_HiQQ",
         "colab_type": "code",
+        "outputId": "4a1831e2-2cdf-48ec-a106-ec9faeafc7f3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "4a1831e2-2cdf-48ec-a106-ec9faeafc7f3"
+        }
       },
       "source": [
         "compute_powers_2(2, end=5)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6400,16 +6460,16 @@
       "metadata": {
         "id": "zAU6KlQHHjW1",
         "colab_type": "code",
+        "outputId": "347df39c-4b56-43a0-addc-606c360ba68c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "347df39c-4b56-43a0-addc-606c360ba68c"
+        }
       },
       "source": [
         "list(compute_powers_3(2, end=5))"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6440,16 +6500,16 @@
       "metadata": {
         "id": "qqtc2ftJHlEF",
         "colab_type": "code",
+        "outputId": "cd130155-581e-47c0-c9f4-46e179fd741e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cd130155-581e-47c0-c9f4-46e179fd741e"
+        }
       },
       "source": [
         "time_it(compute_powers_1, n=2, end=20000, rep=4)"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6470,16 +6530,16 @@
       "metadata": {
         "id": "qpSSErLGHoRm",
         "colab_type": "code",
+        "outputId": "ee3e4fcf-dc9d-48bc-d2ce-c3c7249078a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ee3e4fcf-dc9d-48bc-d2ce-c3c7249078a1"
+        }
       },
       "source": [
         "time_it(compute_powers_2, 2, end=20000, rep=4)"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6500,16 +6560,16 @@
       "metadata": {
         "id": "iZvW8_3XHqlm",
         "colab_type": "code",
+        "outputId": "c553adba-c02a-4186-9cf9-63a40e6a7cae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c553adba-c02a-4186-9cf9-63a40e6a7cae"
+        }
       },
       "source": [
         "time_it(compute_powers_3, 2, end=20000, rep=4)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
